# expense_record-sb_django_training

./: .gitignore  README.md  pyproject.toml
expense_record/: settings.py  urls.py
expense_record_app/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
expense_record_app/migrations/: 0001_initial.py  0002_expense.py  0003_alter_expense_spending_date.py
expense_record_app/static/expense_record_app/: style.css
expense_record_app/templates/: base.html  index.html
expense_record_app/templates/expense/: by_spender.html  new_expense.html
expense_record_app/templates/expense_record_app/: expense_list.html  spender_detail.html  spender_list.html
expense_record_app/templates/spender/: index.html  spender.html
